[workspace]
members = ["tooling/rust/rms"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/reliable-modular-systems/reliable-modular-systems"
repository = "https://github.com/reliable-modular-systems/reliable-modular-systems"
rust-version = "1.89"
