[package]
name = "rms"
version = "0.1.0-rc.3"
edition = "2021"
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Reference CLI for Reliable Modular Systems manifests"
readme = "README.md"
keywords = ["architecture", "modularity", "agents", "validation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rms"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
jsonschema = { version = "0.46.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
syn = { version = "2", features = ["full", "visit"] }
toml = "0.8"
walkdir = "2.5"
